<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
            android:id="@+id/navigation_menu_item_missions"
            android:icon="@drawable/ic_list"
            android:title="@string/title_list_mission"/>
    <item
            android:id="@+id/navigation_menu_item_info"
            android:icon="@drawable/ic_info"
            android:title="@string/title_list_info"/>
</menu>